2009-08-14  Jiahua Huang  <jhuangjiahua@gmail.com>

Reviewed by Jan Alonzo.

        [gtk] Pasteboard/GtkClipboard can't handle the "text/html" target.
        https://bugs.webkit.org/show_bug.cgi?id=27028

        Remove the improper set of enum WebKitWebViewTargetInfo
        by grabbing the target infos via m_helper.

        * manual-tests/gtk/copy-htmltext.html: Added.
        * platform/Pasteboard.h:
        * platform/gtk/PasteboardGtk.cpp:
        (WebCore::clipboard_get_contents_cb):
        * platform/gtk/PasteboardHelper.h:

        Add a function in WebKit::PasteboardHelperGtk that will return the
        value of WEBKIT_WEB_VIEW_TARGET_INFO_HTML,
        and WebCore::clipboard_get_contents_cb will use that.

        * WebCoreSupport/PasteboardHelperGtk.cpp:
        (WebKit::PasteboardHelperGtk::getWebViewTargetInfoHtml):
        * WebCoreSupport/PasteboardHelperGtk.h:

Canonical link: https://commits.webkit.org/38911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47310 268f45cc-cd09-0410-ab3c-d52691b4dbfc