WebKit/gtk/WebCoreSupport/PasteboardHelperGtk.h
@@ -45,6 +45,7 @@ public:
     virtual GtkClipboard* getPrimary(Frame*) const;
     virtual GtkTargetList* getCopyTargetList(Frame*) const;
     virtual GtkTargetList* getPasteTargetList(Frame*) const;
+    virtual gint getWebViewTargetInfoHtml() const;
 };
 
 }
